@@ -4,6 +4,7 @@ Kiwix 0.9 beta2
 * Now able to load on GNU/Linux with the command line ZIM files with " " in their path
 * Add menuitem File > Browse Library (ID: 3377139)
 * Avoid segfault by bookmarks pointing to a missing ZIM file (ID: 3376642)
+* Fixed the searchindex assignement problem if the current ZIM file is changed during indexing process (ID: 3377136)
 
 Kiwix 0.9 beta1
 * Remove a hard coded path in kiwix-compact.sh (ID: 3135956)
